# Planner-Calendar-Goal-App

./: .cursorrules  .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.cursor/: backend.rules.md  frontend.rules.md
.cursor/plans/: companion_details_title_+_remove_edit_mode_f4643d42.plan.md  companion_initials_consistency_c674e8a5.plan.md  fix_useclickoutside_ref_typing_d7473288.plan.md  force_codemirror_dark_41db9139.plan.md  hover_ring_on_type_pills_1351dcfc.plan.md  initials-only_companion_avatars_b3bc443a.plan.md  match_addcompanion_icon_button_cc769c76.plan.md  modern_avatar_badges_d9f00d7c.plan.md  obsidianlikenotesplan_38b3527e.plan.md  remove_last-seen_label_0d139e87.plan.md  rename_notes_panel_title_b5d765c0.plan.md  rightpanel_filesearchtab_53843e59.plan.md  settings_page_+_colors_673e3466.plan.md  taskcard-click-and-delete_ae75e776.plan.md  unify_companion_avatars_e1a4895c.plan.md  weekly_folder_tree_dcd50ecd.plan.md
.github/workflows/: fly-deploy.yml
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  settings.py  supabase_client.py
backend/app/routes/: tasks.py
backend/supabase/: README.md  config.toml
docs/: image-prompts.md  markdown-language.md  supabase-local-dev.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  test-vite.ts
scripts/: guard-workspace-install.cjs
src/: App.tsx  index.css  main.tsx
supabase/: README.md  config.toml  seed.sql
(+146 files in other folders)
