[project]
name = "planner-calendar-goal-backend"
version = "0.1.0"
description = "Python backend for Planner Calendar Goal App"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "supabase>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --port 8000"

